--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shinify",
-  "version": "0.0.2",
+  "name": "shinifyapi",
+  "version": "0.0.1",
   "main": "server.js",
   "author": {
     "name": "Xu Lvcai"
@@ -14,11 +14,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dennis-xlc/rest-api-with-oauth2.git"
+    "url": "https://github.com/fdubbsMobile/rest-api-nodejs.git"
   },
   "dependencies": {
     "body-parser": "^1.9.0",
-    "canvas": "^1.1.6",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.3.3",
@@ -30,7 +29,6 @@
     "mongoose": "^3.8.18",
     "morgan": "^1.4.0",
     "newrelic": "^1.13.2",
-    "nodemailer": "^1.3.0",
     "oauth2orize": "^1.0.1",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
