--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGOSOUP_URL=mongodb://CIhTveCEkDhS:WnJrcwnPyzJe@mongosoup-shared-db005.mongosoup.de:32582/cc_CIhTveCEkDhS
+MONGOHQ_URL=mongodb://heroku:n9BtpMPZdLPxw2OPzXA-U7hDPE1m8Jp5xPdJ-hSw337qKi21JuthhageJCmjOaZCz-CUuqpkWuaULn2Jy3-DkA@dogen.mongohq.com:10009/app30978133
+NODE_ENV=production
