--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "passport-http": "^0.2.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "passport-oauth2-client-password": "^0.1.2"
+    "passport-oauth2-client-password": "^0.1.2",
+    "needle": "~0.7.10",
+    "xml2js": "~0.4.4",
+    "xml2js-expat": "~0.2.2",
+    "iconv": "~2.1.4"
   },
   "scripts": {
     "start": "node server.js"
