--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "passport-local": "^1.0.0",
     "passport-oauth2-client-password": "^0.1.2",
     "xml2js": "~0.4.4",
-    "iconv-lite": "^0.4.4"
+    "iconv-lite": "^0.4.4",
+    "xmldoc": "~0.1.4",
+    "underscore": "~1.7.0"
   },
   "scripts": {
     "start": "node server.js"
