--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^1.0.0",
     "express": "^4.9.8",
     "express-session": "^1.9.0",
+    "iconv-lite": "^0.4.4",
     "mongodb": "^1.4.19",
     "mongoose": "^3.8.18",
     "morgan": "^1.4.0",
@@ -35,10 +36,11 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth2-client-password": "^0.1.2",
+    "request": "^2.51.0",
+    "underscore": "~1.7.0",
     "xml2js": "~0.4.4",
-    "iconv-lite": "^0.4.4",
     "xmldoc": "~0.1.4",
-    "underscore": "~1.7.0"
+    "zombie": "^2.5.1"
   },
   "scripts": {
     "start": "node server.js"
