--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth2-client-password": "^0.1.2",
     "request": "^2.51.0",
+    "tough-cookie-filestore": "0.0.1",
     "underscore": "~1.7.0",
     "xml2js": "~0.4.4",
     "xmldoc": "~0.1.4",
