--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "underscore": "~1.7.0",
     "xml2js": "~0.4.4",
     "xmldoc": "~0.1.4",
-    "zombie": "^2.5.1"
+    "zombie": "~2.5.1",
+    "sleep": "~1.2.0"
   },
   "scripts": {
     "start": "node server.js"
